# build-llm-scratch

./: Makefile  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup_project
notebooks/: chapter_02.ipynb
src/data/: download_the_verdict.py
